--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
       "express-minify": "latest"
     },
     "engines": {
-      "node": "16.x"
+      "node": "latest"
     },
     "keywords": []
   }
