--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
       "express-minify": "latest"
     },
     "engines": {
-      "node": "latest"
+      "node": "v20.19.1", "npm": "v10.8.2"
     },
     "keywords": []
   }
